Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/uesctl/Digicntl">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/uesoft/Digicntl">View on GitHub</a>
 
           <h1 id="project_title">Digicntl</h1>
           <h2 id="project_tagline">Digicntl is an automatic control device for gas fire stove or heater.</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/uesctl/Digicntl/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/uesctl/Digicntl/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/uesoft/Digicntl/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/uesoft/Digicntl/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -33,14 +33,15 @@
       <section id="main_content" class="inner">
         <h1>Digicntl</h1>
 
-<p>Digicntl is an automatic control device for gas fire stove or heater.</p>
+<p>Digicntl is an automatic control device for gas fire stove or heater.
+Digicntl是用于燃气灶或燃气热水器的一种自动控制器，使用无线传输。</p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Digicntl maintained by <a href="https://github.com/uesctl">uesctl</a></p>
+        <p class="copyright">Digicntl maintained by <a href="https://github.com/uesoft">uesoft</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
